--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "add": "^2.0.6",
+    "framer-motion": "^6.2.8",
     "react": "^17.0.2",
     "react-circular-progressbar": "^2.0.4",
+    "react-click-outside-hook": "^1.1.1",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-spinners": "^0.11.0",
     "recharts": "^2.1.9",
     "sass": "^1.49.9",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
