--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.6",
     "react-spinners": "^0.11.0",
     "recharts": "^2.1.9",
     "sass": "^1.49.9",
