--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "add": "^2.0.6",
+    "axios": "^0.26.1",
     "framer-motion": "^6.2.8",
     "react": "^17.0.2",
     "react-circular-progressbar": "^2.0.4",
