--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.6",
     "react-spinners": "^0.11.0",
+    "react-transition-group": "^4.4.2",
     "recharts": "^2.1.9",
     "sass": "^1.49.9",
     "styled-components": "^5.3.5",
