--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "react": "^17.0.2",
     "react-circular-progressbar": "^2.0.4",
     "react-click-outside-hook": "^1.1.1",
+    "react-confetti": "^6.0.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
     "react-scroll": "^1.8.6",
     "react-spinners": "^0.11.0",
+    "react-toastify": "^8.2.0",
     "react-transition-group": "^4.4.2",
+    "react-use-window-size": "^1.0.1",
     "recharts": "^2.1.9",
     "sass": "^1.49.9",
     "styled-components": "^5.3.5",
