--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "add": "^2.0.6",
     "axios": "^0.26.1",
     "framer-motion": "^6.2.8",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-circular-progressbar": "^2.0.4",
     "react-click-outside-hook": "^1.1.1",
