--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "react-click-outside-hook": "^1.1.1",
     "react-confetti": "^6.0.1",
     "react-dom": "^17.0.2",
+    "react-gesture-responder": "^2.1.0",
     "react-icons": "^4.3.1",
+    "react-image-enlarger": "^1.1.0",
+    "react-image-magnify": "^2.7.4",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
     "react-scroll": "^1.8.6",
