--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-scripts": "^5.0.0",
     "react-scroll": "^1.8.6",
     "react-spinners": "^0.11.0",
+    "react-to-print": "^2.14.7",
     "react-toastify": "^8.2.0",
     "react-transition-group": "^4.4.2",
     "react-use-window-size": "^1.0.1",
