--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@testing-library/user-event": "^13.5.0",
     "add": "^2.0.6",
     "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
     "framer-motion": "^6.2.8",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.4.0",
     "react-circular-progressbar": "^2.0.4",
     "react-click-outside-hook": "^1.1.1",
     "react-confetti": "^6.0.1",
