--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "add": "^2.0.6",
     "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
     "framer-motion": "^6.2.8",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
